# monthpack

./: README.md  pyproject.toml
src/monthpack/: __init__.py  config.py  config_templates.py  manager.py  metadata.py  period.py  source.py
